# Test_Django_one

./: .bandit  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .version  Makefile  README.md  check_structure.py  conftest.py  docker-compose.yml  dockerfile  make.bat  manage.py  project_structure.txt  pyproject.toml  pytest.ini  requirements.txt  strucktura.py
.github/workflows/: ci.yml
apps/my_app/: apps.py  forms.py  middleware.py  models.py  test_models.py  urls.py  views.py
apps/my_app/migrations/: 0001_initial.py
config/: settings.py
src/Django_star/: asgi.py  config.py  loggers.py  logging_config.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/my_app/: contact.html  home.html  product_detail.html  product_list.html
tests/: test_integration.py  test_project.py
